[gd_scene load_steps=4 format=3 uid="uid://w3uh624pkya7"]

[ext_resource type="Script" path="res://ui/menus/main_menu/player_menu/player_menu.gd" id="2_d6l5a"]
[ext_resource type="Theme" uid="uid://c28euvt7baml8" path="res://ui/menus/main_menu/player_menu/player_menu_theme.tres" id="2_exytw"]
[ext_resource type="Theme" uid="uid://ciao1yg8aebw5" path="res://ui/menus/main_menu/coming_soon_theme.tres" id="3_88680"]

[node name="PlayerMenu" type="CanvasLayer"]
layer = 2
script = ExtResource("2_d6l5a")

[node name="OpaqueBackground" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_exytw")
color = Color(0, 0, 0, 0.364)

[node name="SetupMenus" type="Control" parent="OpaqueBackground"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentlyEnabledContainer" type="PanelContainer" parent="OpaqueBackground/SetupMenus"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -265.0
offset_right = 572.0
offset_bottom = 511.0
grow_vertical = 2
theme_type_variation = &"LeftMenu"

[node name="VBoxContainer" type="VBoxContainer" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Currently Enabled"
horizontal_alignment = 1

[node name="SeparatorMargin" type="MarginContainer" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HSeparator" type="HSeparator" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer/SeparatorMargin"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="DescriptionsContainer" type="VBoxContainer" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 6

[node name="DescriptionPlaceholders" type="VBoxContainer" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer/MarginContainer/DescriptionsContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3

[node name="KeyBuildingContainer" type="PanelContainer" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer/MarginContainer/DescriptionsContainer/DescriptionPlaceholders"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_88680")

[node name="Label" type="Label" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer/MarginContainer/DescriptionsContainer/DescriptionPlaceholders/KeyBuildingContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HeaderMedium"
text = "Key Building (TBD)"

[node name="GhostsContainer" type="PanelContainer" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer/MarginContainer/DescriptionsContainer/DescriptionPlaceholders"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_88680")

[node name="Label" type="Label" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer/MarginContainer/DescriptionsContainer/DescriptionPlaceholders/GhostsContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HeaderMedium"
text = "Ghosts (TBD)"

[node name="MiscContainer" type="PanelContainer" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer/MarginContainer/DescriptionsContainer/DescriptionPlaceholders"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_88680")

[node name="Label" type="Label" parent="OpaqueBackground/SetupMenus/CurrentlyEnabledContainer/VBoxContainer/MarginContainer/DescriptionsContainer/DescriptionPlaceholders/MiscContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_type_variation = &"HeaderMedium"
text = "Misc (TBD)"

[node name="RestartEncounterButton" type="Button" parent="OpaqueBackground/SetupMenus"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -178.0
offset_top = -115.0
offset_right = 179.0
offset_bottom = -52.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 40
text = "Restart Encounter"

[node name="RightMenuContainer" type="PanelContainer" parent="OpaqueBackground/SetupMenus"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -628.0
offset_top = -511.5
offset_bottom = 511.5
grow_horizontal = 0
grow_vertical = 2
focus_neighbor_left = NodePath("../RestartEncounterButton")
theme_type_variation = &"RightMenu"

[node name="VBoxContainer" type="VBoxContainer" parent="OpaqueBackground/SetupMenus/RightMenuContainer"]
layout_mode = 2

[node name="MenuTitle" type="Label" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
text = "Menu"
horizontal_alignment = 1

[node name="DividerContainer" type="MarginContainer" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20

[node name="HSeparator" type="HSeparator" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer/DividerContainer"]
layout_mode = 2

[node name="OptionsContainer" type="MarginContainer" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="MainMenuTabContainer" type="TabContainer" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer/OptionsContainer"]
unique_name_in_owner = true
layout_mode = 2
current_tab = 0
tabs_visible = false

[node name="HomeMenu" type="VBoxContainer" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer/OptionsContainer/MainMenuTabContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 20
metadata/_tab_index = 0

[node name="SubMenuPlaceholders" type="VBoxContainer" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer/OptionsContainer/MainMenuTabContainer/HomeMenu"]
unique_name_in_owner = true
layout_mode = 2

[node name="KeyBuildingButton" type="Button" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer/OptionsContainer/MainMenuTabContainer/HomeMenu/SubMenuPlaceholders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_neighbor_left = NodePath("../../../../../../../RestartEncounterButton")
focus_neighbor_bottom = NodePath("../GhostsButton")
theme_type_variation = &"MenuSelectButton"
disabled = true
action_mode = 0
text = "Key Building (TBD) >"
alignment = 0

[node name="GhostsButton" type="Button" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer/OptionsContainer/MainMenuTabContainer/HomeMenu/SubMenuPlaceholders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_neighbor_left = NodePath("../../../../../../../RestartEncounterButton")
focus_neighbor_top = NodePath("../KeyBuildingButton")
focus_neighbor_bottom = NodePath("../MiscButton")
theme_type_variation = &"MenuSelectButton"
disabled = true
action_mode = 0
text = "Ghosts (TBD) >"
alignment = 0

[node name="MiscButton" type="Button" parent="OpaqueBackground/SetupMenus/RightMenuContainer/VBoxContainer/OptionsContainer/MainMenuTabContainer/HomeMenu/SubMenuPlaceholders"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
focus_neighbor_left = NodePath("../../../../../../../RestartEncounterButton")
focus_neighbor_top = NodePath("../GhostsButton")
theme_type_variation = &"MenuSelectButton"
disabled = true
action_mode = 0
text = "Misc (TBD) >"
alignment = 0
